@@ -6,13 +6,11 @@ use 5.008_004;
 use strict;
 use warnings FATAL => 'all';
 
-use Data::Dumper;
-
 use Data::Walk qw( walk );
 use List::Util qw( shuffle );
 use String::Random qw( random_regex );
 
-our $VERSION = 0.01;
+our $VERSION = 0.02;
 
 # Guarantee that toposort is loaded.
 use base 'DBIx::Class::TopoSort';
